--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "npm start app.js"
+    "run": "npm start app.js",
+    "start": "node app.js"
   },
   "author": "Nitin Baranwal",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
